# blacktooth10

./: .gitignore  CMakeLists.txt
.github/workflows/: windows-build.yml
Source/: ChainSettings.cpp  ChainSettings.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Components/: EQSliders.h  RotarySlider.h  VerticalSlider.h
Source/Components/LookAndFeel/: Palette.h  PedalLnF.h  RotarySliderLnF.h  VerticalSliderLnF.h
Source/Globals/: Band.cpp  Band.h  GainRange.cpp  GainRange.h
